Updating to latest

--- a/blogs.html
+++ b/blogs.html
@@ -4,42 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aaron Web Dev</title>
+    <title>Blog</title>
     <link href="styles/navbar.css" rel="stylesheet">
-    <link href="styles/hero.css" rel="stylesheet">
-   
+    <link href="styles/blogmain.css" rel="stylesheet">
 </head>
 
 <body>
-
     <nav>
-        <div class="logo"></div>
+        <div class="logo">
+
+        </div>
         <div class="links">
             <ul>
-                <a href="/index.html">
+                <a href="index.html">
                     <li>WHY ME?</li>
                 </a>
                 <a href="/blogs.html">
                     <li>BLOG</li>
                 </a>
-                <a href="#whyMe">
+                <a href="#">
                     <li class="callNow">CONTACT</li>
                 </a>
             </ul>
         </div>
     </nav>
+    
+    <a href="blogposts/why.html"><h1>Do you really need a website?</h1></a>
 
-    <section class="hero contentBox">
-        <div class="heading">
-            <h4>THIS<br>
-                IS<br>
-                AARON<br>
-                LOPEZ<br>
-            </h4>
-        </div>
-    </section>
 
-    <section class="contentBox" id="whyMe"></section>
+
+
+
 
 </body>
 
