--- a/blogs.html
+++ b/blogs.html
@@ -19,7 +19,7 @@
                 <a href="index.html">
                     <li>WHY ME?</li>
                 </a>
-                <a href="/blogs.html">
+                <a href="blogs.html">
                     <li>BLOG</li>
                 </a>
                 <a href="#">
