--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-
+    
     <nav>
         <div class="logo"></div>
         <div class="links">
             <ul>
-                <a href="/index.html">
+                <a href="index.html">
                     <li>WHY ME?</li>
                 </a>
-                <a href="/blogs.html">
+                <a href="blogs.html">
                     <li>BLOG</li>
                 </a>
                 <a href="#whyMe">
@@ -34,13 +34,13 @@
             <h4>THIS<br>
                 IS<br>
                 AARON<br>
-                LOPEZ<br>
+                <h4 id="textChange"><br></h4>
             </h4>
         </div>
     </section>
 
     <section class="contentBox" id="whyMe"></section>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
