--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Aaron Web Dev</title>
     <link href="styles/navbar.css" rel="stylesheet">
     <link href="styles/hero.css" rel="stylesheet">
-   
+
 </head>
 
 <body>
-    
-    <nav>
+
+    <nav id="navBar">
         <div class="logo"></div>
         <div class="links">
             <ul>
@@ -39,8 +39,24 @@
         </div>
     </section>
 
-    <section class="contentBox" id="whyMe"></section>
+    <section class="contentBox" id="services">
+        <div class="services">
+            <img src="assets/design-systems-svgrepo-com.svg">
+            <h2>Website Design</h2>
+        </div>
+        <div class="services">
+            <img src="assets/web-development-svgrepo-com.svg">
+            <h2>Development</h2>
+        </div>
+        <div class="services">
+            <img src="assets/internet-svgrepo-com.svg">
+            <h2>Hosting</h2>
+        </div>
+
+
+    </section>
     <script src="script.js"></script>
+
 </body>
 
 </html>
