--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav id="navBar">
         <div class="logo">
 
         </div>
@@ -28,8 +28,10 @@
             </ul>
         </div>
     </nav>
-    
-    <a href="blogposts/why.html"><h1>Do you really need a website?</h1></a>
+
+    <a href="blogposts/why.html">
+        <h1>Do you really need a website?</h1>
+    </a>
 
 
 
