--- a/index.html
+++ b/index.html
@@ -30,32 +30,38 @@
     </nav>
 
     <section class="hero contentBox">
-        <div class="heading">
-            <h4>THIS<br>
-                IS<br>
-                AARON<br>
-                <h4 id="textChange"><br></h4>
-            </h4>
+        <div class="content">
+            <h2 class="heroText">AARON LOPEZ.<br></h2>
+            <span>Web Developer Freelancer</span>
+            <span>Local to the Central Florida Area</span>
+            <span>Looking to enhance your online presence</span>
+            <h4 id="textChange"></h4>
         </div>
     </section>
 
-    <section class="contentBox" id="services">
+    <section class="contentBox serviceSection" id="services">
         <div class="services">
             <img src="assets/design-systems-svgrepo-com.svg">
             <h2>Website Design</h2>
+            <h3>Creating visually stunning and user-friendly websites
+                that reflect your brand and attract your ideal customers.</h3>
         </div>
         <div class="services">
             <img src="assets/web-development-svgrepo-com.svg">
             <h2>Development</h2>
+            <h3>From simple sites to advanced applications, we build powerful websites that work seamlessly on all
+                devices.</h3>
         </div>
         <div class="services">
             <img src="assets/internet-svgrepo-com.svg">
             <h2>Hosting</h2>
+            <h3>Enjoy peace of mind with our secure, high-speed
+                hosting and ongoing technical support.</h3>
         </div>
-
-
     </section>
-    <script src="script.js"></script>
+    <section class="contentBox why"></section>
+    <section class="contact contentBox"></section>
+    <!-- <script src="script.js"></script> -->
 
 </body>
 
