--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                 <a href="blogs.html">
                     <li>BLOG</li>
                 </a>
-                <a href="#whyMe">
-                    <li class="callNow">CONTACT</li>
+                <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
+                    <li class="callNow mobileButton" id="mobileButton">TEXT NOW</li>
+                </a>
+                <a href="mailto:aaronlopez9210@gmail.com?subject=Interested!&body=Hey Aaron!">
+                    <li class="callNow desktopButton" id="desktopButton">CONTACT</li>
                 </a>
             </ul>
         </div>
@@ -32,9 +35,10 @@
     <section class="hero contentBox">
         <div class="content">
             <h2 class="heroText">AARON LOPEZ.<br></h2>
-            <span>Web Developer Freelancer</span>
+            <span>Freelance Web Developer</span>
             <span>Local to the Central Florida Area</span>
-            <span>Looking to enhance your online presence</span>
+            <span class="enhance">Looking to enhance your online presence?<br>
+            </span>
             <h4 id="textChange"></h4>
         </div>
     </section>
@@ -61,7 +65,7 @@
     </section>
     <section class="contentBox why"></section>
     <section class="contact contentBox"></section>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 
 </body>
 
