--- a/blogs.html
+++ b/blogs.html
@@ -11,9 +11,7 @@
 
 <body>
     <nav id="navBar">
-        <div class="logo">
-
-        </div>
+        <div class="logo"></div>
         <div class="links">
             <ul>
                 <a href="index.html">
@@ -22,8 +20,11 @@
                 <a href="blogs.html">
                     <li>BLOG</li>
                 </a>
-                <a href="#">
-                    <li class="callNow">CONTACT</li>
+                <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
+                    <li class="callNow mobileButton" id="mobileButton">TEXT NOW</li>
+                </a>
+                <a href="mailto:aaronlopez9210@gmail.com?subject=Interested!&body=Hey Aaron!">
+                    <li class="callNow desktopButton" id="desktopButton">CONTACT</li>
                 </a>
             </ul>
         </div>
@@ -37,7 +38,7 @@
 
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
