--- a/blogposts/why.html
+++ b/blogposts/why.html
@@ -11,20 +11,21 @@
 </head>
 
 <body>
-    <nav id="navBar">
-        <div class="logo">
-
-        </div>
+   <nav id="navBar">
+        <div class="logo"></div>
         <div class="links">
             <ul>
                 <a href="../index.html">
                     <li>WHY ME?</li>
                 </a>
-                <a href="/blogs.html">
+                <a href="../blogs.html">
                     <li>BLOG</li>
                 </a>
-                <a href="#">
-                    <li class="callNow">CONTACT</li>
+                <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
+                    <li class="callNow mobileButton" id="mobileButton">TEXT NOW</li>
+                </a>
+                <a href="mailto:aaronlopez9210@gmail.com?subject=Interested!&body=Hey Aaron!">
+                    <li class="callNow desktopButton" id="desktopButton">CONTACT</li>
                 </a>
             </ul>
         </div>
@@ -94,6 +95,7 @@
     </section>
 
 
+    <script src="../script.js"></script>
 </body>
 
 </html>
