--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="logo"></div>
         <div class="links">
             <ul>
-                <a href="index.html">
+                <a href="#why">
                     <li>WHY ME?</li>
                 </a>
                 <a href="blogs.html">
                     <li>BLOG</li>
                 </a>
                 <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
-                    <li class="callNow mobileButton" id="mobileButton">TEXT NOW</li>
+                    <li class="callNow mobileButton" id="mobileButton">CONTACT</li>
                 </a>
                 <a href="mailto:aaronlopez9210@gmail.com?subject=Interested!&body=Hey Aaron!">
                     <li class="callNow desktopButton" id="desktopButton">CONTACT</li>
@@ -35,9 +35,8 @@
     <section class="hero contentBox">
         <div class="content">
             <h2 class="heroText">AARON LOPEZ.<br></h2>
-            <span>Freelance Web Developer</span>
-            <span>Local to the Central Florida Area</span>
-            <span class="enhance">Looking to enhance your online presence?<br>
+            <span class="description">Freelance Web Developer</span>
+            <span class="description">Local to the Central Florida Area</span>
             </span>
             <h4 id="textChange"></h4>
         </div>
@@ -47,23 +46,38 @@
         <div class="services">
             <img src="assets/design-systems-svgrepo-com.svg">
             <h2>Website Design</h2>
-            <h3>Creating visually stunning and user-friendly websites
+            <h3 class="serviceDescription">Creating visually stunning and user-friendly websites
                 that reflect your brand and attract your ideal customers.</h3>
         </div>
         <div class="services">
             <img src="assets/web-development-svgrepo-com.svg">
             <h2>Development</h2>
-            <h3>From simple sites to advanced applications, we build powerful websites that work seamlessly on all
+            <h3 class="serviceDescription">From simple sites to advanced applications, we build powerful websites that
+                work seamlessly on all
                 devices.</h3>
         </div>
         <div class="services">
             <img src="assets/internet-svgrepo-com.svg">
             <h2>Hosting</h2>
-            <h3>Enjoy peace of mind with our secure, high-speed
+            <h3 class="serviceDescription">Enjoy peace of mind with our secure, high-speed
                 hosting and ongoing technical support.</h3>
         </div>
     </section>
-    <section class="contentBox why"></section>
+
+    <section class="contentBox why" id="why">
+        <h3 class="whyHeading">Why Work With Me?</h3>
+        <p class="whyDescription">When it comes to building your website, I believe in doing things differently. <br><br>
+            Instead of relying on pre-made templates or heavy website builders, I create each site from scratch with
+            clean, custom code tailored to
+            your exact needs. <br><br>
+            This means your website not only looks great and functions smoothly, but it’s also lean,
+            fast, and built specifically for your business – without all the extra costs that come with larger agencies.
+            <br><br>
+            By keeping things personal and custom, I’m able to provide you with a high-quality website at a more
+            reasonable price. Think of it like getting a tailor-made suit rather than something off the rack – it simply
+            fits your brand better.
+        </p>
+    </section>
     <section class="contact contentBox"></section>
     <script src="script.js"></script>
 
