--- a/blogs.html
+++ b/blogs.html
@@ -21,7 +21,7 @@
                     <li>BLOG</li>
                 </a>
                 <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
-                    <li class="callNow mobileButton" id="mobileButton">TEXT NOW</li>
+                    <li class="callNow mobileButton" id="mobileButton">CONTACT</li>
                 </a>
                 <a href="mailto:aaronlopez9210@gmail.com?subject=Interested!&body=Hey Aaron!">
                     <li class="callNow desktopButton" id="desktopButton">CONTACT</li>
