integrated "Component Style Sections"

--- a/blogs.html
+++ b/blogs.html
@@ -11,13 +11,20 @@
 
 <body>
     <nav id="navBar">
-        <div class="logo"></div>
+        <div class="logo">
+        </div>
         <div class="links">
             <ul>
-                <a href="index.html">
+                <a href="#" id="home">
+                    <li>HOME</li>
+                </a>
+                <a href="#" id="why">
                     <li>WHY ME?</li>
                 </a>
-                <a href="blogs.html">
+                <a href="#" id="serviceButton">
+                    <li>SERVICES</li>
+                </a>
+                <a href="blogs.html" class="blogButton">
                     <li>BLOG</li>
                 </a>
                 <a href="sms:5613328090?body=Hi Aaron, im interested in getting a website made.">
@@ -33,10 +40,6 @@
     <a href="blogposts/why.html">
         <h1>Do you really need a website?</h1>
     </a>
-
-
-
-
 
     <script src="script.js"></script>
 </body>
