--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <nav id="navBar">
         <div class="logo">
-            </div>  
+        </div>
         <div class="links">
             <ul>
-                 <a href="#" id="home">
-                    <li>HOME</li>
+                <a href="#">
+                    <li id="homeButton">HOME</li>
                 </a>
-                <a href="#" id="why">
-                    <li>WHY ME?</li>
+                <a href="#">
+                    <li id="whyButton">WHY ME?</li>
                 </a>
-                <a href="#" id="serviceButton">
-                    <li>SERVICES</li>
+                <a href="#">
+                    <li id="serviceButton">SERVICES</li>
                 </a>
                 <a href="blogs.html" class="blogButton">
                     <li>BLOG</li>
