--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content">
             <h2 class="heroText">AARON LOPEZ.</h2>
             <span class="description">Freelance Web Developer</span>
-            <span class="description">Location: Clermont, Florida</span>
+            <span class="description">Clermont, Florida</span>
         </div>
     </section>
 
