--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="hero contentBox" id="hero">
         <div class="content">
             <h2 class="heroText">AARON LOPEZ.</h2>
-            <span class="description">Freelance Web Developer</span>
+            <span class="description">Web Developer</span>
             <span class="description">Clermont, Florida</span>
         </div>
     </section>
