--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <h2 class="heroText">AARON LOPEZ.</h2>
             <span class="description">Web Developer</span>
             <span class="description">Clermont, Florida</span>
+
+        <div class="lang">
+            <img src="assets/html-5-svgrepo-com.svg" alt="" class="langImg">
+            <img src="assets/css3-svgrepo-com.svg" alt="" class="langImg">
+            <img src="assets/javascript-svgrepo-com.svg" alt="" class="langImg">
+            <img src="assets/vue-9-logo-svgrepo-com.svg" alt="" class="langImg">
+            <img src="assets/angular-svgrepo-com.svg" alt="" class="langImg">
+        </div>
         </div>
     </section>
 
@@ -86,6 +94,8 @@
             fits your brand better.
         </p>
     </section>
+
+
     <script src="bg.js"></script>
     <script src="script.js"></script>
 
